--- a/Cierge/Views/Account/TokenInput.cshtml
+++ b/Cierge/Views/Account/TokenInput.cshtml
@@ -8,14 +8,15 @@
 
 <div class="row">
     <div class="column">
-        <h3 class="text-success">@ViewData["Title"]</h3>
+        
         @if (String.IsNullOrWhiteSpace(Model.Token))
         {
+            <h3 class="text-success">@ViewData["Title"]</h3>
             @:Please check your email now.
         }
         else
         {
-            <span style="font-weight: bold; font-size: 1.8rem;">Press "Check code" to continue</span>
+            <h3 class="text-success" style="margin-bottom:0;">Press "Check code" to continue</h3>
         }
 
     </div>
