Fixed homepage url

--- a/Cierge/Views/Shared/_Layout.cshtml
+++ b/Cierge/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         <a href="@Configuration["Cierge:AppUrl"]">@Configuration["Cierge:AppName"]</a>
         @if (Boolean.Parse(Configuration["Cierge:BeNice"]))
         {
-            <em class="float-right"><a href="//cierge.biarity.me">Powered by Cierge</a></em>
+            <em class="float-right"><a href="https://pwdless.github.io/Cierge-Website/">Powered by Cierge</a></em>
         }
     </footer>
 
