--- a/Cierge/Views/Shared/_Layout.cshtml
+++ b/Cierge/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-
+    CI TEST TEXT TODO REMOVE ME APPLE UNICORN
     <div class="container main">
         @await Html.PartialAsync("_LoginPartial")
         @RenderBody()
