config defaults and readme email providers

--- a/Cierge/Views/Home/Index.cshtml
+++ b/Cierge/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
         </a>
     </div>
 </div>
-@if (Int32.Parse(Configuration["Cierge:Events:MaxStored"]) > 0)
+@if (Int32.Parse(Configuration["Cierge:Events:MaxStored"] ?? "50") > 0)
 {
     <div class="row">
         <div class="column">
