Adding fields guide

--- a/Cierge/Views/Manage/EditUserInfo.cshtml
+++ b/Cierge/Views/Manage/EditUserInfo.cshtml
@@ -64,7 +64,7 @@
             <label asp-for="FullName"></label>
             <input asp-for="FullName" />
 
-            <label asp-for="FavColor"></label>
+            <label asp-for="FavColor"></label> <!-- !! ADDING FIELDS: If you want users to be able to edit field -->
             <input asp-for="FavColor" />
 
             <button type="submit" class="button">
