--- a/Cierge/Views/Account/Register.cshtml
+++ b/Cierge/Views/Account/Register.cshtml
@@ -47,7 +47,7 @@
             <label asp-for="FullName"></label>
             <input asp-for="FullName" />
 
-            <label asp-for="FavColor"></label>
+            <label asp-for="FavColor"></label> <!-- !! ADDING FIELDS: If you want users to input field on register -->
             <input asp-for="FavColor" />
 
             <button type="submit" class="button-primary">Register</button>
