--- a/Cierge/Views/Account/Login.cshtml
+++ b/Cierge/Views/Account/Login.cshtml
@@ -26,7 +26,7 @@
 {
     <div class="row">
         <div class="column">
-            <p class="text-warning">Sorry, you've reached the maximum number of logins  allowed (@Model.MaxLoginsAllowed).</p>
+            <p >Sorry, you've reached the maximum number of logins  allowed (@Model.MaxLoginsAllowed).</p>
             <a asp-controller="Manage" asp-action="@nameof(ManageController.Logins)">
                 <i class="fa fa-trash-o" aria-hidden="true"></i>&nbsp;
                 Remove a login add a new one
@@ -42,7 +42,7 @@ else
             <div asp-validation-summary="All" class="text-danger"></div>
 
             <label asp-for="Email"></label>
-            <input asp-for="Email" id="EmailIn"/>
+            <input asp-for="Email" id="EmailIn" />
 
             @if (!SignInManager.IsSignedIn(User))
             {
